// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`WakingScreenTemplate renders correctly with en-US locale 1`] = `
<RNCSafeAreaProvider
  onInsetsChange={[Function]}
  style={
    [
      {
        "flex": 1,
      },
      undefined,
    ]
  }
>
  <View
    collapsable={false}
    pointerEvents="box-none"
    style={
      {
        "flex": 1,
      }
    }
  >
    <View
      style={
        [
          {
            "alignItems": "center",
            "flex": 1,
            "justifyContent": "center",
          },
          {
            "backgroundColor": "#070724",
          },
          undefined,
        ]
      }
    >
      <View
        style={
          [
            {
              "alignItems": "center",
              "flex": 1,
              "justifyContent": "space-between",
              "marginLeft": 48,
              "marginRight": 48,
            },
            {
              "backgroundColor": "#070724",
            },
            [
              {
                "maxHeight": 650,
                "maxWidth": 650,
              },
              undefined,
            ],
          ]
        }
      >
        <View
          style={
            {
              "flex": 1,
            }
          }
        >
          <View
            style={
              [
                {
                  "alignItems": "center",
                  "flexDirection": "row",
                  "justifyContent": "center",
                },
                undefined,
              ]
            }
          >
            <Text
              style={
                [
                  {
                    "fontFamily": "calibre_app_semibold",
                    "fontSize": 20,
                  },
                  {
                    "color": "rgba(98, 91, 113, 1)",
                  },
                  {
                    "fontSize": 48,
                  },
                ]
              }
            >
              6:30
            </Text>
            <Text
              style={
                [
                  {
                    "fontFamily": "calibre_app_regular",
                    "fontSize": 20,
                  },
                  {
                    "color": "rgba(98, 91, 113, 1)",
                  },
                  {
                    "fontSize": 22,
                  },
                ]
              }
            >
              am
            </Text>
          </View>
        </View>
        <View
          style={
            {
              "alignItems": "center",
            }
          }
        >
          <View
            collapsable={false}
            style={
              {
                "backgroundColor": "#00ffe6",
                "borderRadius": 16,
                "height": 50,
                "marginBottom": 16,
                "marginTop": 16,
                "shadowColor": "#000",
                "shadowOffset": {
                  "height": 0,
                  "width": 0,
                },
                "shadowOpacity": 0,
                "shadowRadius": 0,
                "width": 270,
              }
            }
            testID="button-container-outer-layer"
          >
            <View
              collapsable={false}
              screenWidth={400}
              style={
                {
                  "backgroundColor": "#00ffe6",
                  "borderColor": "transparent",
                  "borderRadius": 16,
                  "borderStyle": "solid",
                  "borderWidth": 0,
                  "flex": 1,
                  "minWidth": 64,
                  "shadowColor": "#000",
                  "shadowOffset": {
                    "height": 0,
                    "width": 0,
                  },
                  "shadowOpacity": 0,
                  "shadowRadius": 0,
                }
              }
              testID="button-container"
            >
              <View
                accessibilityRole="button"
                accessibilityState={
                  {
                    "busy": undefined,
                    "checked": undefined,
                    "disabled": false,
                    "expanded": undefined,
                    "selected": undefined,
                  }
                }
                accessibilityValue={
                  {
                    "max": undefined,
                    "min": undefined,
                    "now": undefined,
                    "text": undefined,
                  }
                }
                accessible={true}
                collapsable={false}
                focusable={true}
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  [
                    {
                      "overflow": "hidden",
                    },
                    {
                      "borderRadius": 16,
                    },
                  ]
                }
                testID="button"
              >
                <View
                  style={
                    [
                      {
                        "alignItems": "center",
                        "flexDirection": "row",
                        "justifyContent": "center",
                      },
                      undefined,
                    ]
                  }
                >
                  <Text
                    numberOfLines={1}
                    selectable={false}
                    style={
                      [
                        {
                          "textAlign": "left",
                        },
                        {
                          "color": "rgba(28, 27, 31, 1)",
                          "writingDirection": "ltr",
                        },
                        [
                          {
                            "fontFamily": "System",
                            "fontSize": 14,
                            "fontWeight": "500",
                            "letterSpacing": 0.1,
                            "lineHeight": 20,
                          },
                          [
                            {
                              "marginHorizontal": 16,
                              "marginVertical": 9,
                              "textAlign": "center",
                            },
                            false,
                            {
                              "marginHorizontal": 24,
                              "marginVertical": 10,
                            },
                            undefined,
                            false,
                            {
                              "color": "rgba(255, 255, 255, 1)",
                              "fontFamily": "System",
                              "fontSize": 14,
                              "fontWeight": "500",
                              "letterSpacing": 0.1,
                              "lineHeight": 20,
                            },
                            [
                              {
                                "fontFamily": "calibre_app_semibold",
                                "fontSize": 24,
                              },
                              undefined,
                            ],
                          ],
                        ],
                      ]
                    }
                    testID="button-text"
                  >
                    Wake Up
                  </Text>
                </View>
              </View>
            </View>
          </View>
          <Text
            style={
              [
                {
                  "flex": 1,
                  "fontFamily": "calibre_app_regular",
                  "fontSize": 16,
                },
                {
                  "color": "rgba(98, 91, 113, 1)",
                },
                undefined,
              ]
            }
          >
            Tip: You can use the Aurora’s button to stop the alarm.
          </Text>
        </View>
      </View>
    </View>
  </View>
</RNCSafeAreaProvider>
`;

exports[`WakingScreenTemplate renders correctly with ja-JP locale 1`] = `
<RNCSafeAreaProvider
  onInsetsChange={[Function]}
  style={
    [
      {
        "flex": 1,
      },
      undefined,
    ]
  }
>
  <View
    collapsable={false}
    pointerEvents="box-none"
    style={
      {
        "flex": 1,
      }
    }
  >
    <View
      style={
        [
          {
            "alignItems": "center",
            "flex": 1,
            "justifyContent": "center",
          },
          {
            "backgroundColor": "#070724",
          },
          undefined,
        ]
      }
    >
      <View
        style={
          [
            {
              "alignItems": "center",
              "flex": 1,
              "justifyContent": "space-between",
              "marginLeft": 48,
              "marginRight": 48,
            },
            {
              "backgroundColor": "#070724",
            },
            [
              {
                "maxHeight": 650,
                "maxWidth": 650,
              },
              undefined,
            ],
          ]
        }
      >
        <View
          style={
            {
              "flex": 1,
            }
          }
        >
          <View
            style={
              [
                {
                  "alignItems": "center",
                  "flexDirection": "row",
                  "justifyContent": "center",
                },
                undefined,
              ]
            }
          >
            <Text
              style={
                [
                  {
                    "fontFamily": "calibre_app_semibold",
                    "fontSize": 20,
                  },
                  {
                    "color": "rgba(98, 91, 113, 1)",
                  },
                  {
                    "fontSize": 48,
                  },
                ]
              }
            >
              6:30
            </Text>
            <Text
              style={
                [
                  {
                    "fontFamily": "calibre_app_regular",
                    "fontSize": 20,
                  },
                  {
                    "color": "rgba(98, 91, 113, 1)",
                  },
                  {
                    "fontSize": 22,
                  },
                ]
              }
            >
              am
            </Text>
          </View>
        </View>
        <View
          style={
            {
              "alignItems": "center",
            }
          }
        >
          <View
            collapsable={false}
            style={
              {
                "backgroundColor": "#00ffe6",
                "borderRadius": 16,
                "height": 50,
                "marginBottom": 16,
                "marginTop": 16,
                "shadowColor": "#000",
                "shadowOffset": {
                  "height": 0,
                  "width": 0,
                },
                "shadowOpacity": 0,
                "shadowRadius": 0,
                "width": 270,
              }
            }
            testID="button-container-outer-layer"
          >
            <View
              collapsable={false}
              screenWidth={400}
              style={
                {
                  "backgroundColor": "#00ffe6",
                  "borderColor": "transparent",
                  "borderRadius": 16,
                  "borderStyle": "solid",
                  "borderWidth": 0,
                  "flex": 1,
                  "minWidth": 64,
                  "shadowColor": "#000",
                  "shadowOffset": {
                    "height": 0,
                    "width": 0,
                  },
                  "shadowOpacity": 0,
                  "shadowRadius": 0,
                }
              }
              testID="button-container"
            >
              <View
                accessibilityRole="button"
                accessibilityState={
                  {
                    "busy": undefined,
                    "checked": undefined,
                    "disabled": false,
                    "expanded": undefined,
                    "selected": undefined,
                  }
                }
                accessibilityValue={
                  {
                    "max": undefined,
                    "min": undefined,
                    "now": undefined,
                    "text": undefined,
                  }
                }
                accessible={true}
                collapsable={false}
                focusable={true}
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  [
                    {
                      "overflow": "hidden",
                    },
                    {
                      "borderRadius": 16,
                    },
                  ]
                }
                testID="button"
              >
                <View
                  style={
                    [
                      {
                        "alignItems": "center",
                        "flexDirection": "row",
                        "justifyContent": "center",
                      },
                      undefined,
                    ]
                  }
                >
                  <Text
                    numberOfLines={1}
                    selectable={false}
                    style={
                      [
                        {
                          "textAlign": "left",
                        },
                        {
                          "color": "rgba(28, 27, 31, 1)",
                          "writingDirection": "ltr",
                        },
                        [
                          {
                            "fontFamily": "System",
                            "fontSize": 14,
                            "fontWeight": "500",
                            "letterSpacing": 0.1,
                            "lineHeight": 20,
                          },
                          [
                            {
                              "marginHorizontal": 16,
                              "marginVertical": 9,
                              "textAlign": "center",
                            },
                            false,
                            {
                              "marginHorizontal": 24,
                              "marginVertical": 10,
                            },
                            undefined,
                            false,
                            {
                              "color": "rgba(255, 255, 255, 1)",
                              "fontFamily": "System",
                              "fontSize": 14,
                              "fontWeight": "500",
                              "letterSpacing": 0.1,
                              "lineHeight": 20,
                            },
                            [
                              {
                                "fontFamily": "calibre_app_semibold",
                                "fontSize": 24,
                              },
                              undefined,
                            ],
                          ],
                        ],
                      ]
                    }
                    testID="button-text"
                  >
                    起きる
                  </Text>
                </View>
              </View>
            </View>
          </View>
          <Text
            style={
              [
                {
                  "flex": 1,
                  "fontFamily": "calibre_app_regular",
                  "fontSize": 16,
                },
                {
                  "color": "rgba(98, 91, 113, 1)",
                },
                undefined,
              ]
            }
          >
            Tip: アラームを止めるためにAuroraのボタンが使えます。
          </Text>
        </View>
      </View>
    </View>
  </View>
</RNCSafeAreaProvider>
`;

exports[`WakingScreenTemplate renders in desktop mode 1`] = `
<RNCSafeAreaProvider
  onInsetsChange={[Function]}
  style={
    [
      {
        "flex": 1,
      },
      undefined,
    ]
  }
>
  <View
    collapsable={false}
    pointerEvents="box-none"
    style={
      {
        "flex": 1,
      }
    }
  >
    <View
      style={
        [
          {
            "alignItems": "center",
            "flex": 1,
            "justifyContent": "center",
          },
          {
            "backgroundColor": "#070724",
          },
          undefined,
        ]
      }
    >
      <View
        style={
          [
            {
              "alignItems": "center",
              "flex": 1,
              "justifyContent": "space-between",
              "marginLeft": 48,
              "marginRight": 48,
            },
            {
              "backgroundColor": "#070724",
            },
            [
              {
                "maxHeight": 650,
                "maxWidth": 650,
              },
              undefined,
            ],
          ]
        }
      >
        <Text
          style={
            [
              {
                "fontFamily": "calibre_app_regular",
                "fontSize": 24,
                "marginBottom": 48,
                "marginTop": 32,
              },
              {
                "color": "rgba(98, 91, 113, 1)",
              },
              undefined,
            ]
          }
        >
          Time to wake up!
        </Text>
        <View
          style={
            {
              "flex": 1,
            }
          }
        >
          <View
            style={
              [
                {
                  "alignItems": "center",
                  "flexDirection": "row",
                  "justifyContent": "center",
                },
                undefined,
              ]
            }
          >
            <Text
              style={
                [
                  {
                    "fontFamily": "calibre_app_semibold",
                    "fontSize": 20,
                  },
                  {
                    "color": "rgba(98, 91, 113, 1)",
                  },
                  {
                    "fontSize": 48,
                  },
                ]
              }
            >
              6:30
            </Text>
            <Text
              style={
                [
                  {
                    "fontFamily": "calibre_app_regular",
                    "fontSize": 20,
                  },
                  {
                    "color": "rgba(98, 91, 113, 1)",
                  },
                  {
                    "fontSize": 22,
                  },
                ]
              }
            >
              am
            </Text>
          </View>
        </View>
        <View
          style={
            {
              "alignItems": "center",
            }
          }
        >
          <View
            collapsable={false}
            style={
              {
                "backgroundColor": "#00ffe6",
                "borderRadius": 16,
                "height": 50,
                "marginBottom": 16,
                "marginTop": 16,
                "shadowColor": "#000",
                "shadowOffset": {
                  "height": 0,
                  "width": 0,
                },
                "shadowOpacity": 0,
                "shadowRadius": 0,
                "width": 270,
              }
            }
            testID="button-container-outer-layer"
          >
            <View
              collapsable={false}
              screenWidth={1400}
              style={
                {
                  "backgroundColor": "#00ffe6",
                  "borderColor": "transparent",
                  "borderRadius": 16,
                  "borderStyle": "solid",
                  "borderWidth": 0,
                  "flex": 1,
                  "minWidth": 64,
                  "shadowColor": "#000",
                  "shadowOffset": {
                    "height": 0,
                    "width": 0,
                  },
                  "shadowOpacity": 0,
                  "shadowRadius": 0,
                }
              }
              testID="button-container"
            >
              <View
                accessibilityRole="button"
                accessibilityState={
                  {
                    "busy": undefined,
                    "checked": undefined,
                    "disabled": false,
                    "expanded": undefined,
                    "selected": undefined,
                  }
                }
                accessibilityValue={
                  {
                    "max": undefined,
                    "min": undefined,
                    "now": undefined,
                    "text": undefined,
                  }
                }
                accessible={true}
                collapsable={false}
                focusable={true}
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  [
                    {
                      "overflow": "hidden",
                    },
                    {
                      "borderRadius": 16,
                    },
                  ]
                }
                testID="button"
              >
                <View
                  style={
                    [
                      {
                        "alignItems": "center",
                        "flexDirection": "row",
                        "justifyContent": "center",
                      },
                      undefined,
                    ]
                  }
                >
                  <Text
                    numberOfLines={1}
                    selectable={false}
                    style={
                      [
                        {
                          "textAlign": "left",
                        },
                        {
                          "color": "rgba(28, 27, 31, 1)",
                          "writingDirection": "ltr",
                        },
                        [
                          {
                            "fontFamily": "System",
                            "fontSize": 14,
                            "fontWeight": "500",
                            "letterSpacing": 0.1,
                            "lineHeight": 20,
                          },
                          [
                            {
                              "marginHorizontal": 16,
                              "marginVertical": 9,
                              "textAlign": "center",
                            },
                            false,
                            {
                              "marginHorizontal": 24,
                              "marginVertical": 10,
                            },
                            undefined,
                            false,
                            {
                              "color": "rgba(255, 255, 255, 1)",
                              "fontFamily": "System",
                              "fontSize": 14,
                              "fontWeight": "500",
                              "letterSpacing": 0.1,
                              "lineHeight": 20,
                            },
                            [
                              {
                                "fontFamily": "calibre_app_semibold",
                                "fontSize": 24,
                              },
                              undefined,
                            ],
                          ],
                        ],
                      ]
                    }
                    testID="button-text"
                  >
                    Wake Up
                  </Text>
                </View>
              </View>
            </View>
          </View>
          <Text
            style={
              [
                {
                  "flex": 1,
                  "fontFamily": "calibre_app_regular",
                  "fontSize": 16,
                },
                {
                  "color": "rgba(98, 91, 113, 1)",
                },
                undefined,
              ]
            }
          >
            Tip: You can use the Aurora’s button to stop the alarm.
          </Text>
        </View>
      </View>
    </View>
  </View>
</RNCSafeAreaProvider>
`;
